feat: expose UniFFI trait interfaces in Dart bindings

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -71,6 +71,7 @@ members = [
     "fixtures/streams_ext",
     "fixtures/simple-fns",
     "fixtures/trait-methods",
+    "fixtures/trait-interfaces",
     #"fixtures/*",
 ]
 
