--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,6 +35,7 @@ heck = "0.5"
 uniffi = { workspace = true, features = ["build", "tokio"] }
 uniffi_dart_macro = { path = "./uniffi_dart_macro" }
 uniffi_bindgen = { workspace = true }
+uniffi_meta = "0.30.0"
 camino = "1"
 serde = "1"
 toml = "0.9"
